--- a/index.html
+++ b/index.html
@@ -5,9 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dropbox</title>
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
+
+  <!-- HEADER -->
+
+  <header>
+    <!-- 2 blocchi div, sx div logo+ nav lista e dx nav lista+ div link -->
+  </header>
+
+  <!-- MAIN -->
+
+  <section id="jumbo">
+    <!-- h1 + 2 div: testo con cta + img -->
+  </section>
+
+  <section id="piano">
+    <h2>Trova il tuo piano business</h2>
+    <!-- h2+2 radio-btn span?+ 4 div (stessa classe)-->
+  </section>
+
+  <section id="contatto">
+    <!-- 2 div: img + h3, testo e link   -->
+  </section>
+
+  <section id="operazioni">
+    <!-- h2 + 6 div con card -->
+  </section>
+
+  <section id="users">
+    <!-- h2 + link  -->
+  </section>
+
+  <section id="design">
+    <!-- loghi sponsor + div centrale con logo+testo -->
+  </section>
+
+  <section id="prova">
+    <!-- testo + link -->
+  </section>
+
+  <section id="domande">
+    <!-- h2 + blocco domande -->
+  </section>
+
+  <!-- FOOTER  -->
+
+  <footer>
+    <!-- 5 div con liste + language -->
+  </footer>
   
 </body>
 
