--- a/index.html
+++ b/index.html
@@ -16,22 +16,51 @@
 
 </head>
 
-<body>
+<body class="debug">
 
   <!-- HEADER -->
+  <!-- TODO: -->
+  misura logo
+  colore testo
+  background "Inizia" (link o button?)
+  distanziare i link
+  
+  <!-- FIXME: -->
+  textdecoration non funziona
 
   <header>
-    <!-- 2 blocchi div, sx div logo+ nav lista e dx nav lista+ div link -->
+    <div class="topbar-left">
+      <div class="logo">
+        <img src="assets/img/logo-small.png" alt="logo">
+      </div>
+      <nav>
+          <ul>
+            <li><a href="#">Perché Dropbox</a></li>
+            <li><a href="#">Funzioni</a></li>
+            <li><a href="#">Piani e Prezzi</a></li>
+          </ul>
+      </nav>
+    </div>
+
+    <div class="topbar-right">
+      <nav>
+        <ul>
+          <li><a href="#">Supporto</a></li>
+          <li><a href="#">Contatta l'ufficio vendite</a></li>
+          <li><a href="#">Accedi</a></li>
+          <li><a href="#">Inizia</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <!-- MAIN -->
 
-  <section id="jumbo">
+  <section id="jumbotron">
     <!-- h1 + 2 div: testo con cta + img -->
   </section>
 
   <section id="piano">
-    <h2>Trova il tuo piano business</h2>
     <!-- h2+2 radio-btn span?+ 4 div (stessa classe)-->
   </section>
 
