--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 <body class="debug">
 
   <!-- HEADER -->
-  <!-- TODO: -->
+  <!-- TODO: 
   misura logo
   colore testo
+  menu deve essere fixed
   background "Inizia" (link o button?)
-  distanziare i link
+  distanziare i link -->
   
-  <!-- FIXME: -->
-  textdecoration non funziona
+  <!-- FIXME: 
+  text-decoration non funziona-->
 
   <header>
     <div class="topbar-left">
@@ -57,6 +58,10 @@
   <!-- MAIN -->
 
   <section id="jumbotron">
+    <div class="container-large">
+      <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+      
+    </div>
     <!-- h1 + 2 div: testo con cta + img -->
   </section>
 
