[fix]textcolor e distance header

--- a/index.html
+++ b/index.html
@@ -20,14 +20,9 @@
 
   <!-- HEADER -->
   <!-- TODO: 
-  misura logo
-  colore testo
   menu deve essere fixed
-  background "Inizia" (link o button?)
-  distanziare i link -->
+  background "Inizia" (link o button?) -->
   
-  <!-- FIXME: 
-  text-decoration non funziona-->
 
   <header>
     <div class="topbar-left">
@@ -60,6 +55,11 @@
   <section id="jumbotron">
     <div class="container-large">
       <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+      <div class="d-flex">
+        <div>testo</div>
+        <div>immagine</div>
+
+      </div>
       
     </div>
     <!-- h1 + 2 div: testo con cta + img -->
