--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- HEADER -->
   <!-- TODO: 
-  menu deve essere fixed
+  menu deve essere "fixed"
   background "Inizia" (link o button?) -->
   
 
@@ -51,14 +51,21 @@
   </header>
 
   <!-- MAIN -->
-
+<!-- TODO:
+trovare back-ground color corretto jumbo
+title più grande
+ -->
   <section id="jumbotron">
     <div class="container-large">
       <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
       <div class="d-flex">
-        <div>testo</div>
-        <div>immagine</div>
-
+        <div class="jumbo-text">
+          <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business é più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+          
+        </div>
+        <div class="jumbo-img">
+          <img src="assets/img/jumbo.png" alt="">
+          </div>
       </div>
       
     </div>
