[fix] bg-c, title-size & margins

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
   <!-- MAIN -->
 <!-- TODO:
 trovare back-ground color corretto jumbo
-title più grande
  -->
   <section id="jumbotron">
     <div class="container-large">
@@ -61,7 +60,11 @@ title più grande
       <div class="d-flex">
         <div class="jumbo-text">
           <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business é più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-          
+
+          <div class="prova">
+            <a href="#">Inizia la tua prova gratuita</a>
+          </div>
+
         </div>
         <div class="jumbo-img">
           <img src="assets/img/jumbo.png" alt="">
