--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <!-- HEADER -->
   <!-- TODO: 
-  menu deve essere "fixed"
-  background "Inizia" (link o button?) -->
+  header deve essere "fixed"
+  background "Inizia" -->
   
 
   <header>
@@ -44,16 +44,21 @@
           <li><a href="#">Supporto</a></li>
           <li><a href="#">Contatta l'ufficio vendite</a></li>
           <li><a href="#">Accedi</a></li>
-          <li><a href="#">Inizia</a></li>
+          <li class="link"><a href="#">Inizia</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <!-- MAIN -->
-<!-- TODO:
-trovare back-ground color corretto jumbo
- -->
+
+  <!-- SECTION JUMBOTRON -->
+
+  <!-- TODO: 
+  margini/padding
+  size arrow
+  flex-->
+
   <section id="jumbotron">
     <div class="container-large">
       <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
@@ -63,6 +68,14 @@ trovare back-ground color corretto jumbo
 
           <div class="prova">
             <a href="#">Inizia la tua prova gratuita</a>
+          </div>
+
+          <div class="annulla">
+            <p>Annulla in qualsiasi momento</p>
+          </div>
+
+          <div class="arrow">
+            <i class="fa-solid fa-arrow-down"></i>
           </div>
 
         </div>
@@ -75,7 +88,16 @@ trovare back-ground color corretto jumbo
     <!-- h1 + 2 div: testo con cta + img -->
   </section>
 
+  <!-- SECTION BUSINESS PLAN -->
+
   <section id="piano">
+    <div class="container-small">
+      <h2>testo</h2>
+      <div>radio-buttons</div>
+      <div>colonne</div>
+    </div>
+
+
     <!-- h2+2 radio-btn span?+ 4 div (stessa classe)-->
   </section>
 
