[add]title, btn and column structure to section piano

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a href="#">Inizia la tua prova gratuita</a>
           </div>
 
-          <div class="annulla">
+          <div class="cancel">
             <p>Annulla in qualsiasi momento</p>
           </div>
 
@@ -89,16 +89,30 @@
   </section>
 
   <!-- SECTION BUSINESS PLAN -->
-
+ 
+  <!-- TODO: 
+  fix radio-btns
+  -->
+  
   <section id="piano">
     <div class="container-small">
-      <h2>testo</h2>
-      <div>radio-buttons</div>
-      <div>colonne</div>
+      <h2>Trova il piano business che fa per te</h2>
+      <div class="radio-btn">
+        <input type="radio" value="monthly" required>Fatturazione mensile
+        <span>
+          <input type="radio" value="annual" required>Fatturazione annuale</span>
+      </div>
+      <div class="d-flex">
+          <div class="column">
+            colonna 1
+          </div>
+          <div class="column">
+            colonna 2
+          </div>
+          <div class="column">
+            colonna 3
+      </div>
     </div>
-
-
-    <!-- h2+2 radio-btn span?+ 4 div (stessa classe)-->
   </section>
 
   <section id="contatto">
