[add]content first column

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="jumbo-text">
           <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business é più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
 
-          <div class="prova">
+          <div class="prova link">
             <a href="#">Inizia la tua prova gratuita</a>
           </div>
 
@@ -102,10 +102,23 @@
         <span>
           <input type="radio" value="annual" required>Fatturazione annuale</span>
       </div>
+
       <div class="d-flex">
           <div class="column">
-            colonna 1
+            <h3>Professional</h3>
+            <div class="price">€ 12.00</div>
+            <div class="duration">/mese</div>
+            <ul>
+              <li>1 utente</li>
+              <li>5 TB di spazio di archiviazione sicuro</li>
+              <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+              <li class="link"><a href="#">Prova gratis per 30 giorni</a></li>
+            </ul>
           </div>
+
+
+
+
           <div class="column">
             colonna 2
           </div>
