[fix] link con bgr blue

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
   <!-- HEADER -->
   <!-- TODO: 
-  header deve essere "fixed"
-  background "Inizia" -->
+  header deve essere "fixed" -->
   
 
   <header>
@@ -56,8 +55,7 @@
 
   <!-- TODO: 
   margini/padding
-  size arrow
-  flex-->
+  -->
 
   <section id="jumbotron">
     <div class="container-large">
