--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
  
   <!-- TODO: 
   fix radio-btns
+  fix link aquista
+  spazio tra colonne
+  icons
+
   -->
   
   <section id="piano">
@@ -102,28 +106,39 @@
       </div>
 
       <div class="d-flex">
-          <div class="column">
-            <h3>Professional</h3>
-            <div class="price">€ 12.00</div>
-            <div class="duration">/mese</div>
-            <ul>
-              <li>1 utente</li>
-              <li>5 TB di spazio di archiviazione sicuro</li>
-              <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
-              <li class="link"><a href="#">Prova gratis per 30 giorni</a></li>
-            </ul>
+        <div class="column">
+          <h3>Professional</h3>
+          <div class="price">€ 12.00</div>
+          <div class="duration">/mese</div>
+          <ul>
+            <li>1 utente</li>
+            <li>5 TB di spazio di archiviazione sicuro</li>
+            <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+          </ul>
+
+          <div class="link">
+            <a href="#">Prova gratis per 30 giorni</a>
           </div>
+          <div class="buy">oppure<a href="#">acquista ora</a></div>
+              
+          <h4>Punti Sallenti del piano</h4>
+          <ul>
+            <li>Invia file fino a 100 GB con Dropbox Transfert</li>
+            <li>Cartelle offline su dispositivi mobili</li>
+          </ul>
+        </div>
 
 
 
 
-          <div class="column">
+        <div class="column">
             colonna 2
-          </div>
-          <div class="column">
+        </div>
+        <div class="column">
             colonna 3
+        </div>
       </div>
-    </div>
+    </div>  
   </section>
 
   <section id="contatto">
