--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome --><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <title>Dropbox</title>
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -116,14 +117,16 @@
             <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
           </ul>
 
-          <div class="link">
+          <div class="link trial">
             <a href="#">Prova gratis per 30 giorni</a>
           </div>
-          <div class="buy">oppure<a href="#">acquista ora</a></div>
+          <div class="buy">oppure <a href="#">acquista ora</a></div>
               
           <h4>Punti Sallenti del piano</h4>
           <ul>
-            <li>Invia file fino a 100 GB con Dropbox Transfert</li>
+            
+            <li>
+              <i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</li>
             <li>Cartelle offline su dispositivi mobili</li>
           </ul>
         </div>
